Add IEEE Xplore support

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
+            "args": ["--search", "devsecops"],
             "console": "integratedTerminal",
             "justMyCode": true,
         }
